@@ -1,0 +1,31 @@
+/*
+    Copyright 2016 Felspar Co Ltd. http://support.felspar.com/
+    Distributed under the Boost Software License, Version 1.0.
+    See accompanying file LICENSE_1_0.txt or copy at
+        http://www.boost.org/LICENSE_1_0.txt
+*/
+
+
+#pragma once
+
+
+#include <fostgres/fg/fg.hpp>
+
+
+namespace fg {
+
+
+    /// Register that new builtins should be added to the runtime
+    class register_builtins {
+        std::function<void(frame &)> lambda;
+    public:
+        /// Register a lambda that will be created when the initial
+        /// frame is built before executing a script.
+        register_builtins(std::function<void(frame &)>);
+
+        void operator () (frame &) const;
+    };
+
+
+}
+
