@@ -1,3 +1,6 @@
+2016-09-03  Kirit Saelensminde  <kirit@felspar.com>
+ * Add a language extension mechanism.
+
 2016-08-28  Kirit Saelensminde  <kirit@felspar.com>
  Object PUT support can now have confiugrations for multiple tables.
 
